# RegioRust

./: Artificial Datasets.ipynb  Cargo.toml  README.md  SCT.py  artificial_regions.py  compare_real_datasets.py  compare_synthetic_datasets.py  example_vertex.txt  pyregiorust.py  regionalization.py  requirements.txt  test.py
data/: USA_ecoregions.pkl  USA_ecoregions_cont.pkl  USA_ecoregions_dist.pkl  USA_vote_2004.pkl  ecodemo_NUTS1.csv  ecodemo_NUTS1.pkl  ecodemo_NUTS1_cont.csv  ecodemo_NUTS1_cont.pkl  ecodemo_NUTS1_dist.csv  ecodemo_NUTS1_dist.pkl  ecodemo_NUTS2.pkl  ecodemo_NUTS2_cont.pkl  ecodemo_NUTS2_dist.pkl  ecodemo_NUTS3.pkl  education_BE_cont.pkl  education_BE_dist.pkl
data/USA_ecoregions/: USA_ecoregions.json  USA_ecoregions_mst.csv  USA_ecoregions_result.csv  USA_ecoregions_sct.csv
data/USA_vote_2004/: U.csv  USA_vote_2004.json  USA_vote_2004_mst.csv  USA_vote_2004_result.csv  USA_vote_2004_sct.csv
data/artificial_datasets/: size10_cont.pkl  size10_k10_centers20_delta2_mr20_0.json  size10_k10_centers20_delta2_mr20_0_dist.json  size10_k10_centers20_delta2_mr20_1.json  size10_k10_centers20_delta2_mr20_1_dist.json  size10_k10_centers40_delta2_0.pkl  size10_k10_centers40_delta2_0_dist.pkl  size10_k10_centers40_delta2_1.pkl  size10_k10_centers40_delta2_1_dist.pkl  size10_k10_centers40_delta2_2.pkl  size10_k10_centers40_delta2_2_dist.pkl  size10_k10_centers40_delta2_3.json  size10_k10_centers40_delta2_3.pkl  (+267 more)
src/: SCT.py  artificial_regions.py  data.py  lib.rs  main.rs  pyregio.py  pyregiorust.py  regionalization.rs  regiorust.py  regiostate.py  regiostate.rs
(+57 files in other folders)
